--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Title</title>
-    </head>
-    <body>
-        <form action=""></form>
-        <script src="./assets/js/index.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form validation</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+<body>
+    <form action="">
+        
+        <fieldset>
+            <label for="email">Email:</label>
+            <input type="email" name="authorization" id="email">
+            <label for="password">Password:</label>
+            <input type="password" name="authorization" id="password">
+        </fieldset>
+    </form>
+
+    <script src="./assets/js/index.js"></script>
+</body>
 </html>
